    * 0667 FIX: oracle_asm_diskgroup: Now really uses the generic filesystem levels...
    * 0555 FIX: snmp_uptime: no longer fails if uptime is < 1 seconds
    * 0136 FIX: cisco_fru_power: Prevent inventory of not exsisting devices

    Multisite:
    * 0278 FIX: Fixed bookmark icon images for non-english user languages...


1.2.4:
    Core & Setup:
    * 0682 FIX: Allow overriding of active and custom checks by more specific rule...
    * 0267 FIX: Fixed auth.serials permission problem in check_mk standalone installation...

    Checks & Agents:
    * 0694 wut_webtherm: Support new versions of WUT-Thermometer...
    * 0688 FIX: winperf_msx_queues: Support output of Exchange 2013...
    * 0689 FIX: postgres_sessions: fix empty agent section in case of 0 sessions...
    * 0692 FIX: fileinfo: Avoid duplicate entries in Solaris agent...
    * 0693 FIX: hpux_lvm: avoid problem when alternative vgdisplay is installed...

    Multisite:
    * 0270 FIX: Multisite host tag filter: Now uses exact match...
    * 0273 FIX: Fixed exceptions when modifying / cloning views...
    * 0274 FIX: Fixed exception when view title or description was missing

    WATO:
    * 0686 FIX: Fix replication with WATO if EC is enabled on master and disabled on slave
    * 0129 FIX: Fixed permission bug in "Edit user profile" dialog....
    * 0269 FIX: brocade_fcport: fixed problem on displaying check_parameters in WATO...
    * 0271 FIX: Fixed sorting in duallist element (two lists with interchangable elements)...
    * 0131 FIX: Error rates for network interfaces can now be set smaller then 0.1 when using Wato....
    * 0690 FIX: Fix language jumping to German when saving user profiles
    * 0666 FIX: Minimum port for the mknotifyd is now 1024 (never use well known ports)...

    Notifications:
    * 0133 FIX: Fixed mkeventd notification plugin...

    Livestatus:
    * 0276 nagios4 livestatus support...


1.2.4b7:
    Core & Setup:
    * 0452 Speedup generation of configuration...